k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicemesh
  namespace: default
  labels:
    name: servicemesh
spec:
  ports:
    - port: 3198
      targetPort: 8080
      protocol: TCP
  selector:
    app: servicemesh
  type: ClusterIP
